# jwt-allauth

./: .gitignore  .readthedocs.yaml  README.md  dev-requirements.txt  pydev.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: check-version.yml  publish.yml  pylint.yml  python-app.yml  quickstart-smoke.yml  tests-min-deps.yml
.pydev/: pydev.yaml
.pydev/rag_vectors/: chroma.sqlite3  manifest.json
.pydev/summaries/: _module.yaml  adapter.yaml  app_settings.yaml  apps.yaml  constants.yaml  exceptions.yaml  models.yaml  permissions.yaml  roles.yaml  test.yaml  urls.yaml  utils.yaml
django_jwt_allauth.egg-info/: PKG-INFO  SOURCES.txt
docs/source/: admin_managed_registration.rst  api_endpoints.rst  conf.py  configuration.refresh_token.rst  configuration.rst  configuration.serializers.rst  configuration.settings_py.rst  email_verification.rst  index.rst  installation.rst  jwt_allauth.login.rst  jwt_allauth.password_change.rst  jwt_allauth.registration.admin_managed.rst  (+10 more)
jwt_allauth/: constants.py  social_serializers.py  test.py  utils.py
summaries/: _module.md  adapter.md  app_settings.md  apps.md  constants.md  exceptions.md  models.md  permissions.md  roles.md  test.md  urls.md  utils.md
tests/: __init__.py  _test_social.py  django_urls.py  mixins.py  requirements.pip  settings.py  test_admin_registration.py  test_email_verification.py  test_login.py  test_logout.py  test_mfa.py  test_password_change.py  test_password_reset.py  test_permissions.py  test_registration.py  test_startproject.py  test_tokens.py  test_user_details.py  urls.py
(+84 files in other folders)
