[metadata]
license_file = LICENSE


[flake8]
max-line-length = 120
exclude = docs/*,build/*,django_jwt_allauth.egg-info/*,jwt_allauth/*
ignore = W504


[coverage:run]
omit=*site-packages*,*distutils*,*migrations*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html

[metadata]
url = https://github.com/castellanos-dev/jwt-allauth
project_urls =
    Homepage = https://github.com/castellanos-dev/jwt-allauth
    Repository = https://github.com/castellanos-dev/jwt-allauth
